# attractor

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
api/: index.py
beacon-demo/: index.html
examples/: branching.dot  code_review.dot  hello_world.dot
src/agent_loop/: __init__.py  client.py  events.py  loop_detection.py  session.py  session_config.py  subagents.py  truncation.py  turns.py
src/attractor/: __init__.py
src/unified_llm/: __init__.py  _base64.py  _http.py  _normalize.py  _retry.py  _sse.py  adapter.py  client.py  errors.py  generate.py  middleware.py  stream.py
src/wolverine/: __init__.py  config.py  runner.py
tests/fixtures/: branching.dot  goal_gate.dot  human_gate.dot  simple_pipeline.dot
tests/test_agent_loop/: test_client.py  test_events.py  test_loop_detection.py  test_session.py  test_session_config.py  test_subagents.py  test_truncation.py  test_turns.py
tests/test_conditions/: test_conditions.py
tests/test_engine/: test_edge_selector.py  test_engine.py  test_retry.py
tests/test_handlers/: test_handlers.py
tests/test_integration/: test_integration.py
tests/test_interviewer/: test_interviewer.py
tests/test_parser/: test_parser.py
tests/test_stylesheet/: test_stylesheet.py
tests/test_transforms/: test_transforms.py
tests/test_unified_llm/: test_adapter.py  test_base64.py  test_catalog.py  test_client.py  test_config.py  test_content.py  test_enums.py  test_errors.py  test_generate.py  test_http.py  test_messages.py  test_middleware.py  test_normalize.py  test_request.py  test_response.py  test_results.py  (+5 more)
(+178 files in other folders)
